Add meta tags for search engines and create basic html body structure

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines-->
+    <meta name="description" content="Consultancy service offering support and advice on equality and diversity in workplace and educational settings">
+    <meta name="keywords" content=" cohevision, equality, diversity, workplace, information, support">
+
+    <!-- Title -->
     <title>CoheVision</title>
     <!-- Links for favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -11,6 +16,11 @@
     <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>Header</header>
+    <!-- Main Content -->
+    <main>Main Content</main>
+    <!-- Footer -->
+    <footer>Footer</footer>
 </body>
 </html>
