Create navigation section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         <a href="index.html">
             <h1 id="logo">CoheVision</h1>
         </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="diversity">Diversity</a></li>
+                <li><a href="inclusion">Inclusion</a></li>
+                <li><a href="tips">Tips</a></li>
+                <li><a href="resources">Resources</a></li>
+                <li><a href="contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <!-- Main Content -->
     <main>Main Content</main>
