Style navigation bar using css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 id="logo">CoheVision</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="diversity">Diversity</a></li>
                 <li><a href="inclusion">Inclusion</a></li>
