--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <a href="index.html">
             <h1 id="logo">CoheVision</h1>
         </a>
+        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
