--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <h1 id="logo">Logo</h1>
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars" id="burger-icon"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
