Change position of cover text box

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
     </header>
     <!-- Main Content -->
     <main>
-        <section id="hero"></section>
+        <div>
+            <section id="hero"></section>
+        </div>
+        <div id="cover-text">
+            <h2>Lorem Ipsum</h2>
+            <h3>Insert text here</h3>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
