--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="diversity">Diversity</a></li>
-                <li><a href="inclusion">Inclusion</a></li>
-                <li><a href="tips">Tips</a></li>
-                <li><a href="resources">Resources</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="#diversity">Diversity</a></li>
+                <li><a href="#inclusion">Inclusion</a></li>
+                <li><a href="#tips">Tips</a></li>
+                <li><a href="#resources">Resources</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -81,7 +81,7 @@
                 </div>
               </div>
         </div>
-        <div class="row">
+        <div class="row" id="resources">
             <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2"> 
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
@@ -134,7 +134,7 @@
       </div>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
         <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
