Add and edit diversity image

--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
     <div class="container-fluid text-center">
         <div class="row">
           <div class="col-sm-12 col-md-6" id="diversity">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="assets/images/diversity-image.png" id="diversity-image" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Diversity</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">Diversity: what does it mean?</h5>
+                  <p class="card-text">
+                    <strong>Diversity</strong> in the workplace or educational setting refers to the presence and inclusion of individuals from various backgrounds, experiences, cultures, and identities. It promotes a rich environment where different perspectives are valued and utilized, enhancing creativity, inclusivity, and fostering mutual respect and understanding among all members.</p>
               </div>
           </div>
           <div class="col-sm-12 col-md-6" id="inclusion">
