Add and style inclusion image using CSS

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </div>
           </div>
           <div class="col-sm-12 col-md-6" id="inclusion">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="assets/images/inclusion-image.png" id="inclusion-image" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Inclusion</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
