Add hero image corporate statement

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <section id="hero"></section>
         </div>
         <div id="cover-text">
-            <h2>Lorem Ipsum</h2>
-            <h3>Insert text here</h3>
+            <h2>Inclusivity Insight</h2>
+            <h3>Empowering inclusive environments where every voice is heard and every individual thrives</h3>
         </div>
     <!-- Bootstrap grid -->
     <div class="container-fluid text-center">
@@ -92,9 +92,9 @@
           <div class="col-12" id="tips">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Ten impactful tips to help promote diversity and inclusion within a workplace or educational setting:</h5>
+                  <h4 class="card-title">Ten impactful tips to help promote diversity and inclusion within a workplace or educational setting:</h4>
                   <p class="card-text">                    
-                    1. Leadership Commitment
+                    <h5>1. Leadership Commitment</h5>
                     Ensure leadership is committed to diversity and inclusion by setting clear goals, policies, and leading by example.
                     
                     2. Training and Education
