update meta data and title

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines-->
     <meta name="description" content="Consultancy service offering support and advice on equality and diversity in workplace and educational settings">
-    <meta name="keywords" content=" cohevision, equality, diversity, workplace, information, support">
+    <meta name="keywords" content=" inclusivity insight, equality, diversity, workplace, information, support">
 
     <!-- Title -->
-    <title>Title</title>
+    <title>Inclusivity Insight</title>
     <!-- Links for favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
     <!-- Header -->
     <header>
         <!-- Bootstrap Navigation Bar -->
-  <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
