Move link to CSS stylesheet so it overrides bootstrap CSS

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <!-- Header -->
     <header>
         <!-- Bootstrap Navigation Bar -->
-  <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary navbar">
+  <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" style="background-color:aqua;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Inclusivity Insight</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
