--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="#tips">Tips</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#resources">Resources</a>
+            <a class="nav-link" href="#resources-title">Resources</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -131,6 +131,11 @@
                     <h5>BONUS TIP: Hire us to help you align these goals with your business needs.</h5>
                 </div>
               </div>
+        </div>
+        <div class="row" id="resources-title">
+          <div class="col-sm-12">
+            <h3>External Resources</h3> 
+          </div>
         </div>
         <div class="row" id="resources">
             <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2"> 
