Edit link button names

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="card-body" id="external-resource">
                   <h5 class="card-title">Business in the Community</h5>
                   <p class="card-text">Business in the Community, founded by HRH The Prince of Wales, unites leaders to share expertise and create impactful programmes.</p>
-                  <a href="https://www.bitc.org.uk/" target="_blank" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://www.bitc.org.uk/" target="_blank" class="btn btn-primary">Click here</a>
                 </div>
             </div>
               <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2"> 
@@ -151,7 +151,7 @@
                 <div class="card-body" id="external-resource">
                   <h5 class="card-title">Equality & Human Rights Commission</h5>
                   <p class="card-text">The Equality and Human Rights Commission advocates for equality and human rights in Britain, enforcing and advising on equality legislation.</p>
-                  <a href="https://www.equalityhumanrights.com/en" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://www.equalityhumanrights.com/en" class="btn btn-primary">Click here</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2"> 
@@ -159,7 +159,7 @@
                 <div class="card-body" id="external-resource">
                   <h5 class="card-title">Age UK</h5>
                   <p class="card-text">Age UK provides support, advice, and services for older people, advocating for their rights and promoting wellbeing.</p>
-                  <a href="https://www.ageuk.org.uk/" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://www.ageuk.org.uk/" class="btn btn-primary">Click here</a>
                 </div>
             </div>
               <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2"> 
@@ -167,21 +167,21 @@
                 <div class="card-body" id="external-resource">
                   <h5 class="card-title">Chronic Illness Inclusion</h5>
                   <p class="card-text">Chronic Illness Inclusion advocates for disability rights and policy change for those with energy-limiting conditions and chronic pain.</p>
-                  <a href="https://chronicillnessinclusion.org.uk/" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://chronicillnessinclusion.org.uk/" class="btn btn-primary">Click here</a>
                 </div>
             </div>
               <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2"> 
                 <div class="card-body" id="external-resource">
                   <h5 class="card-title">Stonewall</h5>
                   <p class="card-text">Stonewall advocates for LGBTQ+ rights, fighting for equality, freedom, and potential, empowering communities and driving positive societal change.</p>
-                  <a href="https://www.stonewall.org.uk/" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://www.stonewall.org.uk/" class="btn btn-primary">Click here</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
                 <div class="card-body" id="external-resource">
                   <h5 class="card-title">Refugee Council</h5>
                   <p class="card-text">The UK Refugee Council supports and advocates for refugees, providing essential services like employment, resettlement, and integration assistance</p>
-                  <a href="https://www.refugeecouncil.org.uk/" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://www.refugeecouncil.org.uk/" class="btn btn-primary">Click here</a>
                 </div>
             </div>
           </div>
