--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container-fluid text-center">
         <div class="row">
           <div class="col-sm-12 col-md-6" id="diversity">
-                <img src="assets/images/diversity-image.png" id="diversity-image" class="card-img-top" alt="...">
+                <img src="assets/images/diversity-image.png" alt="Image of a diverse group of people in a huddle" id="diversity-image" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Diversity: what does it mean?</h5>
                   <p class="card-text">
@@ -80,7 +80,7 @@
               </div>
           </div>
           <div class="col-sm-12 col-md-6" id="inclusion">
-                <img src="assets/images/inclusion-image.png" id="inclusion-image" class="card-img-top" alt="...">
+                <img src="assets/images/inclusion-image.png" alt="image displaying the words embrace kindness" id="inclusion-image" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Inclusion: how does it help your team to thrive?</h5>
                   <p class="card-text"><strong>Inclusion</strong> in the workplace or educational setting means fostering an environment where everyone feels respected, valued, and supported. It ensures that individuals from diverse backgrounds and perspectives can fully participate, contribute, and thrive, promoting equity, collaboration, and a sense of belonging for all members.</p>
