Remove h3 tags that were in incorrect sequential order

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-12" id="tips">
                 
                 <div class="card-body">
-                  <h4 class="card-title"><h3>Ten impactful tips to help promote diversity and inclusion:</h3></h4>
+                  <h4 class="card-title">Ten impactful tips to help promote diversity and inclusion:</h4>
                   <div class="card-text">                    
                     <h5>1. Leadership Commitment</h5>
                     <p>Ensure leadership is committed to diversity and inclusion by setting clear goals, policies, and leading by example.</p>
