--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Main Content -->
     <main>
         <div>
-            <section id="hero"></section>
+            <section id="hero"><h2></h2></section>
         </div>
         <div id="cover-text">
             <h2>Inclusivity Insight</h2>
